@@ -132,6 +132,7 @@ lib/rdoc/normal_module.rb
 lib/rdoc/options.rb
 lib/rdoc/parser.rb
 lib/rdoc/parser/c.rb
+lib/rdoc/parser/markdown.rb
 lib/rdoc/parser/rd.rb
 lib/rdoc/parser/ruby.rb
 lib/rdoc/parser/ruby_tools.rb
@@ -214,6 +215,7 @@ test/test_rdoc_normal_module.rb
 test/test_rdoc_options.rb
 test/test_rdoc_parser.rb
 test/test_rdoc_parser_c.rb
+test/test_rdoc_parser_markdown.rb
 test/test_rdoc_parser_rd.rb
 test/test_rdoc_parser_ruby.rb
 test/test_rdoc_parser_simple.rb
