@@ -1,6 +1,18 @@
 # coding: UTF-8
 class RDoc::Markdown::Literals
-# STANDALONE START
+  # :stopdoc:
+
+    # This is distinct from setup_parser so that a standalone parser
+    # can redefine #initialize and still have access to the proper
+    # parser setup code.
+    def initialize(str, debug=false)
+      setup_parser(str, debug)
+    end
+
+
+
+    # Prepares for parsing +str+.  If you define a custom initialize you must
+    # call this method before #parse
     def setup_parser(str, debug=false)
       @string = str
       @pos = 0
@@ -12,19 +24,11 @@ class RDoc::Markdown::Literals
       setup_foreign_grammar
     end
 
-    # This is distinct from setup_parser so that a standalone parser
-    # can redefine #initialize and still have access to the proper
-    # parser setup code.
-    #
-    def initialize(str, debug=false)
-      setup_parser(str, debug)
-    end
-
     attr_reader :string
     attr_reader :failing_rule_offset
     attr_accessor :result, :pos
 
-    # STANDALONE START
+    
     def current_column(target=pos)
       if c = string.rindex("\n", target-1)
         return target - c - 1
@@ -52,7 +56,7 @@ class RDoc::Markdown::Literals
       lines
     end
 
-    #
+
 
     def get_text(start)
       @string[start..@pos-1]
@@ -245,7 +249,6 @@ class RDoc::Markdown::Literals
     def apply_with_args(rule, *args)
       memo_key = [rule, args]
       if m = @memoizations[memo_key][@pos]
-        prev = @pos
         @pos = m.pos
         if !m.set
           m.left_rec = true
@@ -280,7 +283,6 @@ class RDoc::Markdown::Literals
 
     def apply(rule)
       if m = @memoizations[rule][@pos]
-        prev = @pos
         @pos = m.pos
         if !m.set
           m.left_rec = true
@@ -348,7 +350,9 @@ class RDoc::Markdown::Literals
       RuleInfo.new(name, rendered)
     end
 
-    #
+
+  # :startdoc:
+  # :stopdoc:
   def setup_foreign_grammar; end
 
   # Alphanumeric = /\p{Word}/
@@ -444,4 +448,5 @@ class RDoc::Markdown::Literals
   Rules[:_Newline] = rule_info("Newline", "(\"\\n\" | \"\" \"\\n\"? | /\\p{Zl}|\\p{Zp}/)")
   Rules[:_NonAlphanumeric] = rule_info("NonAlphanumeric", "/\\p{^Word}/")
   Rules[:_Spacechar] = rule_info("Spacechar", "(\"\\t\" | /\\p{Zs}/)")
+  # :startdoc:
 end
