@@ -25,9 +25,10 @@ module RDoc::Text
   # unknown, "rdoc" format is used.
 
   MARKUP_FORMAT = {
-    'rdoc'   => RDoc::Markup,
-    'rd'     => RDoc::RD,
-    'tomdoc' => RDoc::TomDoc,
+    'markdown' => RDoc::Markdown,
+    'rdoc'     => RDoc::Markup,
+    'rd'       => RDoc::RD,
+    'tomdoc'   => RDoc::TomDoc,
   }
 
   MARKUP_FORMAT.default = RDoc::Markup
